check version with not working config

--- a/charts/gl-runner/values.yaml
+++ b/charts/gl-runner/values.yaml
@@ -29,6 +29,7 @@ gl-runner:
         bucketName: ""
     config: |
       [[runners]]
+        name = "k8s-dev-runner"
         url = "https://gitlab.com/"
         [runners.kubernetes]
           namespace = "{{ default .Release.Namespace .Values.runners.jobNamespace }}"
