default service account name is empty and create is true

--- a/charts/gl-runner/values.yaml
+++ b/charts/gl-runner/values.yaml
@@ -87,8 +87,7 @@ gl-runner:
     #   value: "true"
     #   effect: NoSchedule
   serviceAccount:
-    create: "false"
-    name: "runner"
+    create: true
   rbac:
     create: true
     rules:
