--- a/charts/gl-runner/values.yaml
+++ b/charts/gl-runner/values.yaml
@@ -89,8 +89,8 @@ gl-runner:
     #   value: "true"
     #   effect: NoSchedule
   serviceAccount:
-    create: false
-    name: "runner"
+    create: true
+    name: ""
   rbac:
     create: true
     rules:
