--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -442,8 +442,10 @@ prometheus-main:
         image: quay.io/thanos/thanos:v0.39.2@sha256:1d022ef4b8eff056a0e3b7822f953d931c5704d068413f2d7ce5266aa96c9e80
         version: v0.39.2
         objectStorageConfig:
-          key: objstore.yml
-          name: thanos
+          secret:
+            type: "{{ .Values.global.bucket.type | upper }}"
+            config:
+              bucket: "{{ .Values.global.company.name }}-thanos-{{ .Values.global.env.short_name }}"
         resources:
           limits:
             cpu: 350m
