--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ charts/**/charts
 !charts/chart_deps/fluent/fluentbit/fluentbit-standalone/charts
 !charts/chart_deps/postgres/postgres-cluster/charts
 !charts/chart_deps/rabbitmq/rabbitmq-cluster-operator/charts
+!charts/chart_deps/prometheus/prometheus-operated/charts
