--- a/charts/chart_deps/prometheus/prometheus-operated/Chart.yaml
+++ b/charts/chart_deps/prometheus/prometheus-operated/Chart.yaml
@@ -3,3 +3,8 @@ appVersion: "1.0"
 description: helm chart for creating prometheus resources of prometheus operator
 name: prometheus-operated
 version: 0.1.0
+
+dependencies:
+  - name: core
+    version: 0.1.0
+    repository: file://../../app/core
