--- a/charts/chart_deps/prometheus/prometheus-operated/values.yaml
+++ b/charts/chart_deps/prometheus/prometheus-operated/values.yaml
@@ -130,7 +130,7 @@ prometheus:
 
     logLevel: info
 
-    logFormat: logfmt
+    logFormat: json
 
     scrapeInterval: "30s"
 
@@ -270,6 +270,18 @@ prometheus:
 
     thanos:
       blockSize: 2h
+      image: quay.io/thanos/thanos:v0.39.2@sha256:1d022ef4b8eff056a0e3b7822f953d931c5704d068413f2d7ce5266aa96c9e80
+      version: v0.39.2
+      objectStorageConfig:
+        name: thanos
+        key: objstore.yml
+      resources:
+        limits:
+          cpu: 350m
+          memory: 150Mi
+        requests:
+          cpu: 10m
+          memory: 35Mi
 
     queryLogFile:
 
