--- a/charts/chart_deps/prometheus/prometheus-operated/templates/secret.yaml
+++ b/charts/chart_deps/prometheus/prometheus-operated/templates/secret.yaml
@@ -1,5 +1,5 @@
 {{- range $name, $secret := .Values.secrets }}
-{{- $labels := include "common.labels" $ | fromYaml }}
-{{- $secret = set $secret "name" ( printf "%s-%s" (include "common.fullname" $ )  $name ) }}
+{{- $labels := include "prometheus-operated.labels" $ | fromYaml }}
+{{- $secret = set $secret "name" ( printf "%s-%s" (include "prometheus-operated.fullname" $ )  $name ) }}
 {{- include "core.secret" (list $ $labels $secret ) }}
 {{- end }}
