--- a/charts/chart_deps/prometheus/prometheus-operated/values.yaml
+++ b/charts/chart_deps/prometheus/prometheus-operated/values.yaml
@@ -298,9 +298,10 @@ prometheus:
 
 
 secrets:
-  name: thanos
-  data:
-    objstore.yml: |
-      type: "{{ .Values.global.bucket.type | upper }}"
-      config:
-        bucket: "{{ .Values.global.company.name }}-thanos-{{ .Values.global.env.short_name }}"
+  thanos:
+    name: thanos
+    data:
+      objstore.yml: |
+        type: "{{ .Values.global.bucket.type | upper }}"
+        config:
+          bucket: "{{ .Values.global.company.name }}-thanos-{{ .Values.global.env.short_name }}"
